Mudança na cor da luneta de pesquisa

--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="search-container">
         <img
-          src="{{ url_for('static', filename='images/search.png') }}"
+          src="{{ url_for('static', filename='images/search2.png') }}"
           alt="search icon"
           class="search-icon"
         />
