Alteração no nome do search

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,10 +10,9 @@
     />
   </head>
   <body>
-        <div class="nav-top"><Search></Search> • Opinion</div>
+    <div class="nav-top">Search • Opinion</div>
     <div class="container">
 
-      <hr />
     <div class="container">
       <div class="search-container">
         <img
