--- a/static/style.css
+++ b/static/style.css
@@ -205,17 +205,17 @@ a:hover {
 
 .nav-top {
   background: #000000;
-  top: 10px;
-  left: 10px;
-  right: 10px;
   color: #fff;
   font-size: 1.4em;
   font-weight: bold;
   text-align: center;
-  padding: 18px 0;
+  padding: 25px 0;
   border: 1.6px solid #444;
   border-radius: 0 0 20px 20px;
-  margin-bottom: 20px;
+  margin: -15px -20px 20px -20px;
+  width: calc(100% + 40px);
+  position: relative;
+  z-index: 10;
 }
 
 .nav-footer {
