--- a/templates/search.html
+++ b/templates/search.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="nav-top">Search • Opinion</div>
+    <div class="nav-top">Pesquisa • Opinion</div>
     <div class="container">
 
     <div class="container">
