Engroçando a borda da pesquisa 5

--- a/static/style.css
+++ b/static/style.css
@@ -518,8 +518,8 @@ button:active {
 }
 
 #searchInput:focus {
-  border-color: #ff2626;
-  border-width: 2.5px;
+  outline: 3px solid #ff0000;
+  outline-offset: 2px;
 }
 
 .search-icon {
