removendo o fundo azul ao clicar em btn open

--- a/static/style.css
+++ b/static/style.css
@@ -393,6 +393,10 @@ button:active {
   object-fit: contain;
 }
 
+.open-post-btn:focus {
+  outline: none;
+}
+
 .modal-post {
   display: none;
   position: fixed;
