--- a/static/style.css
+++ b/static/style.css
@@ -167,12 +167,14 @@ a:hover {
 .like-count {
   margin-left: -4px;
   font-size: 14px;
+  vertical-align: middle;
 }
 
 .post-acoes {
   display: flex;
   gap: 10px;
   margin-top: 10px;
+  margin-right: 15px;
   align-items: center;
 }
 
@@ -608,6 +610,13 @@ button:active {
   .post-outro {
     border-radius: 0 20px 20px 20px;
   }
+}
+
+.resposta-numero {
+  font-size: 14px;
+  font-weight: normal;
+  margin-left: 2px;
+  vertical-align: middle;
 }
 
 img,
