--- a/static/style.css
+++ b/static/style.css
@@ -321,23 +321,23 @@ button:active {
   outline: none !important;
 }
 
-/* Nova caixa de postagem como um "modal" */
 .container_chat_bot {
-  display: none; /* Inicialmente escondida */
+  display: none;
   position: fixed;
   z-index: 999;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.7);
-  flex-direction: column; /* Para centralizar o conteúdo verticalmente */
-  justify-content: center; /* Centraliza verticalmente */
-  align-items: center; /* Centraliza horizontalmente */
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 50px;
+  box-sizing: border-box;
 }
 
-/* Conteúdo da nova caixa */
 .container_chat_bot .container-chat-options {
   position: relative;
   display: flex;
@@ -352,10 +352,12 @@ button:active {
   border-radius: 16px;
   padding: 1px;
   overflow: hidden;
-  max-width: 300px; /* Mantido o max-width para o design */
+  max-width: 300px;
   width: 100%;
-  border: 4px solid #ff0000; /* Borda da caixa principal */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra para destacar */
+  border: 2px solid #ff0000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transform: translateY(0);
+  transition: transform 0.2s ease-out;
 }
 
 .container_chat_bot .container-chat-options .chat {
@@ -377,10 +379,12 @@ button:active {
   border-radius: 16px;
   border: none;
   width: 100%;
-  height: 50px; /* Altura inicial */
+  height: 85px;
+  min-height: 85px;
+  max-height: 180px;
   color: #ffffff;
   font-family: sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   padding: 10px;
   resize: none;
@@ -478,17 +482,16 @@ button:active {
   transform: scale(0.92);
 }
 
-/* Botão de fechar para a nova caixa de postagem */
 .close-new-post-box {
   color: #aaa;
   font-size: 26px;
   font-weight: bold;
-  position: absolute; /* Posição absoluta dentro do contêiner_chat_bot */
+  position: absolute;
   top: 8px;
   right: 15px;
   cursor: pointer;
-  z-index: 1000; /* Acima de outros elementos */
-  background: transparent; /* Certifique-se de que não tem fundo extra */
+  z-index: 1000;
+  background: transparent;
 }
 
 .close-new-post-box:hover,
